# telegram-account-bot

./: .gitignore  README.md  example.py  init.sh  main.py  pyproject.toml  setup.sh  start.sh  test.session
config/: config.py
utils/: flip.py  ghoul.py  heart.py  out_calc.py  qr.py
